<resources>
    <string name="app_name">MATCH</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="button_login">Login</string>
    <string name="button_new_user">New user</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="enter_name">Full name</string>
    <string name="title_activity_test">testActivity</string>
    <string name="button_search_activity">Search Activity</string>
    <string name="button_create_activity">Create Activity</string>
    <string name="button_show_own_activities">Show own activities</string>
    <string name="button_search">Search</string>
    <string name="enter_type_of_activity">Type of activity</string>
    <string name="enter_date_of_activity">Date of activity</string>
    <string name="enter_time_of_activity">Time of activity</string>
    <string name="enter_number_of_participants">Number of participants</string>
    <string name="title_own_activities">Own activities</string>
    <string name="search_activities">Search for Activities</string>
    <string name="select_activity">Select Activity</string>
    <string-array name="search_activity_type">
        <item>Sport</item>
        <item>Music</item>
        <item>Outdoor</item>
        <item>Events</item>
        <item>Shopping</item>
        <item>Games</item>
        <item>Other</item>
    </string-array>
    <string name="new_search">Make New Search</string>
    <string name="newPassword">Enter Email to Send New Password</string>
    <string name="wrongPassword">Wrong Password or Email</string>
    <string name="chooseActivity">Title of Activity</string>
    <string name="activity_title">Title of Activity: %1$s</string>
    <string name="activity_date">Date: %1$s</string>
    <string name="activity_time">Time: %1$s</string>
    <string name="activity_location">Location: %1$s</string>
    <string name="activity_city">City: %1$s</string>
    <string name="min_participants">Min. nr Participants: %1$s</string>
    <string name="max_participants">Max. nr Participants: %1$s</string>
    <string name="activity_description">Description: %1$s</string>
    <string name="userEmail">Creators Email: %1$s</string>
    <string name="button_pick_location">Pick Location</string>
    <string name="button_pick_date_time">Pick Date and Time</string>
    <string name="button_pick_date">Pick Date</string>
    <string name="button_participant_amount">Participant amount</string>
    <string name="google_place_api">AIzaSyCk0D4BMVZn_P-VOITkH1aaHXIae3zLzi0</string>
    <string name="enter_SSN">Enter SSN</string>
    <string name="button_register">Register</string>
    <string name="button_forgot_password">Reset Password</string>


</resources>
