<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context="com.systems.spanning.platform.match.LoginActivity">


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/Linearid"
        android:focusable="true">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_banner" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="32dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/enterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="32dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/enterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/wrongPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/wrongPassword"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible"/>


        <android.support.v7.widget.AppCompatButton
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:id="@+id/appCompatButtonLogin"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="32dp"
            android:text="@string/button_login"
            android:onClick="LoginClick"/>

        <android.support.v7.widget.AppCompatButton
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:text="@string/button_new_user"
            android:onClick="RegisterClick" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewLinkRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_marginStart="120dp"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:onClick="ForgotPasswordClick"/>



    </android.support.v7.widget.LinearLayoutCompat>
</android.support.constraint.ConstraintLayout>
