<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    tools:context="com.systems.spanning.platform.match.RegisterActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/Linearid"
        android:focusable="true"
        android:layout_marginStart="32dp">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_banner" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutSSN"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextSSN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_SSN"
                android:inputType="text"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPasswordRepeat"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditTextPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatButton
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:id="@+id/appCompatButtonRegister"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_register"
            android:onClick="RegisterClick"/>


    </android.support.v7.widget.LinearLayoutCompat>
</android.support.constraint.ConstraintLayout>
