<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/settings"/>

        <android.support.v7.widget.AppCompatButton
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:id="@+id/ButtonSearchActivity"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="32dp"
        android:text="@string/button_search_activity"
        android:onClick="newGoToSearchActivity"/>

        <android.support.v7.widget.AppCompatButton
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:id="@+id/ButtonCreateActivity"
        android:layout_width="305dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="32dp"
        android:text="@string/button_create_activity"
        android:onClick="newGoToCreateActivity"/>

        <android.support.v7.widget.AppCompatButton
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:id="@+id/ButtonShowOwn"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="32dp"
            android:text="@string/button_show_own_activities"
            android:onClick="newGoToShowOwnActivity"/>

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.constraint.ConstraintLayout>