<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/LinearID"
        android:focusable="true">

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/home_button"
            android:onClick="homeClick"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/select_activity"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:entries="@array/search_activity_type"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputActivityType"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/chooseActivity"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:id="@+id/button_pick_date_time"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_pick_date"
            android:textAllCaps="false" />
        <TextView
            android:id="@+id/pick_date_time_results"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="" />

        <android.support.v7.widget.AppCompatButton
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:id="@+id/pick_location_button"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_pick_location"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/pick_location_results"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:id="@+id/textview_min2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Select minimum \namount of \nparticipants: " />

            <NumberPicker
                android:id="@+id/numberpicker_min2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.50"
                android:scaleY="0.50"
                android:layout_below="@id/textview_min2" />

            <TextView
                android:id="@+id/textview_max2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Select maximum \namount of \nparticipants: " />

            <NumberPicker
                android:id="@+id/numberpicker_max2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.50"
                android:scaleY="0.50"
                android:layout_below="@id/textview_max2" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:id="@+id/SearchButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/search_activities"
            android:textAllCaps="false"
            android:onClick="SearchClick"/>

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.constraint.ConstraintLayout>